--- a/archives/toutiao-search/2023-10-23.md
+++ b/archives/toutiao-search/2023-10-23.md
@@ -1,58 +1,81 @@
 # 2023-10-23
 
-共 346 条
+共 365 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Oct 23 2023 20:09:02 GMT+0800 (China Standard Time) -->
-1. [中方呼吁巴以冲突有关各方保持克制](https://so.toutiao.com/search?keyword=中方呼吁巴以冲突有关各方保持克制)
+<!-- 最后更新时间 Mon Oct 23 2023 21:08:19 GMT+0800 (China Standard Time) -->
+1. [以军将对加沙发动持续3个月地面攻势](https://so.toutiao.com/search?keyword=以军将对加沙发动持续3个月地面攻势)
 1. [中使馆就菲船只擅闯仁爱礁提出交涉](https://so.toutiao.com/search?keyword=中使馆就菲船只擅闯仁爱礁提出交涉)
-1. [人间重晚晴](https://so.toutiao.com/search?keyword=人间重晚晴)
-1. [胡锡进谈A股大跌：应对市场信心抄底](https://so.toutiao.com/search?keyword=胡锡进谈A股大跌：应对市场信心抄底)
-1. [原中央委员落马两个月后下属也被查](https://so.toutiao.com/search?keyword=原中央委员落马两个月后下属也被查)
-1. [400万豪车右转撞上正常直行大货车](https://so.toutiao.com/search?keyword=400万豪车右转撞上正常直行大货车)
-1. [国内油价明天24时又将调整](https://so.toutiao.com/search?keyword=国内油价明天24时又将调整)
-1. [曝蒋大为武汉商演遭遇冷场](https://so.toutiao.com/search?keyword=曝蒋大为武汉商演遭遇冷场)
-1. [“长沙交警执法时推倒电动车”系谣言](https://so.toutiao.com/search?keyword=“长沙交警执法时推倒电动车”系谣言)
+1. [多陪陪他们 趁一切正好](https://so.toutiao.com/search?keyword=多陪陪他们+趁一切正好)
+1. [中央汇金：买入ETF并将继续增持](https://so.toutiao.com/search?keyword=中央汇金：买入ETF并将继续增持)
 1. [我国发现首个千亿方深煤层大气田](https://so.toutiao.com/search?keyword=我国发现首个千亿方深煤层大气田)
+1. [曝蒋大为武汉商演遭遇冷场](https://so.toutiao.com/search?keyword=曝蒋大为武汉商演遭遇冷场)
+1. [胡锡进谈A股大跌：应对市场信心抄底](https://so.toutiao.com/search?keyword=胡锡进谈A股大跌：应对市场信心抄底)
+1. [女子举报嫂子身为公职人员婚内出轨](https://so.toutiao.com/search?keyword=女子举报嫂子身为公职人员婚内出轨)
+1. [“长沙交警执法时推倒电动车”系谣言](https://so.toutiao.com/search?keyword=“长沙交警执法时推倒电动车”系谣言)
+1. [国内油价明天24时又将调整](https://so.toutiao.com/search?keyword=国内油价明天24时又将调整)
+1. [美用过83次一票否决权53次给以色列](https://so.toutiao.com/search?keyword=美用过83次一票否决权53次给以色列)
+1. [外媒称加沙经历最血腥夜晚](https://so.toutiao.com/search?keyword=外媒称加沙经历最血腥夜晚)
+1. [富士康被查有何玄机](https://so.toutiao.com/search?keyword=富士康被查有何玄机)
+1. [原中央委员落马两个月后下属也被查](https://so.toutiao.com/search?keyword=原中央委员落马两个月后下属也被查)
+1. [燃料短缺致加沙上千人面临生命危险](https://so.toutiao.com/search?keyword=燃料短缺致加沙上千人面临生命危险)
+1. [芯片管制再升级 美国到底在怕什么](https://so.toutiao.com/search?keyword=芯片管制再升级+美国到底在怕什么)
+1. [刘慈欣为招行90后员工颁雨果奖](https://so.toutiao.com/search?keyword=刘慈欣为招行90后员工颁雨果奖)
+1. [广东汕头发生5.0级地震](https://so.toutiao.com/search?keyword=广东汕头发生5.0级地震)
+1. [豪车与直行货车相撞 货车被判次责](https://so.toutiao.com/search?keyword=豪车与直行货车相撞+货车被判次责)
+1. [买1.6万黄金1小时后换款缩水5600](https://so.toutiao.com/search?keyword=买1.6万黄金1小时后换款缩水5600)
+1. [四川资阳多人当街打架斗殴](https://so.toutiao.com/search?keyword=四川资阳多人当街打架斗殴)
+1. [iPhone 15全系降价](https://so.toutiao.com/search?keyword=iPhone+15全系降价)
+1. [24岁产妇产后出血昏迷50多天离世](https://so.toutiao.com/search?keyword=24岁产妇产后出血昏迷50多天离世)
+1. [美国28岁女保姆性侵8月大女婴](https://so.toutiao.com/search?keyword=美国28岁女保姆性侵8月大女婴)
+1. [为买华为Mate 60顾客购买问界新车](https://so.toutiao.com/search?keyword=为买华为Mate+60顾客购买问界新车)
+1. [全国房价比峰顶下降16%](https://so.toutiao.com/search?keyword=全国房价比峰顶下降16%)
+1. [“无臂飞鱼”郭金城一路领先到终点](https://so.toutiao.com/search?keyword=“无臂飞鱼”郭金城一路领先到终点)
+1. [朝中社：美国是中东事态主谋](https://so.toutiao.com/search?keyword=朝中社：美国是中东事态主谋)
+1. [伊朗外长与哈马斯领导人通话](https://so.toutiao.com/search?keyword=伊朗外长与哈马斯领导人通话)
+1. [网友吐槽上海地铁“板凳族”](https://so.toutiao.com/search?keyword=网友吐槽上海地铁“板凳族”)
+1. [塞尔维亚：谴责威胁中国统一的企图](https://so.toutiao.com/search?keyword=塞尔维亚：谴责威胁中国统一的企图)
+1. [周杰伦演唱会抢镜女粉丝回应](https://so.toutiao.com/search?keyword=周杰伦演唱会抢镜女粉丝回应)
+1. [男童因家中无人照看从5楼坠落](https://so.toutiao.com/search?keyword=男童因家中无人照看从5楼坠落)
+1. [王毅会见不丹外交大臣丹迪·多吉](https://so.toutiao.com/search?keyword=王毅会见不丹外交大臣丹迪·多吉)
+1. [于和伟说莫言才是我的yyds](https://so.toutiao.com/search?keyword=于和伟说莫言才是我的yyds)
+1. [芬兰称将调查中国船只 外交部回应](https://so.toutiao.com/search?keyword=芬兰称将调查中国船只+外交部回应)
+1. [中方愿同不丹推动边界谈判实现建交](https://so.toutiao.com/search?keyword=中方愿同不丹推动边界谈判实现建交)
+1. [纳米压印技术能取代光刻机吗](https://so.toutiao.com/search?keyword=纳米压印技术能取代光刻机吗)
+1. [青岛啤酒董事会就小便门发布公告](https://so.toutiao.com/search?keyword=青岛啤酒董事会就小便门发布公告)
+1. [网友吐槽00后女儿不知道东西南北](https://so.toutiao.com/search?keyword=网友吐槽00后女儿不知道东西南北)
+1. [明年春节后养猪亏损或重于今年同期](https://so.toutiao.com/search?keyword=明年春节后养猪亏损或重于今年同期)
+1. [媒体：校园鼠头疑云需要明确答案](https://so.toutiao.com/search?keyword=媒体：校园鼠头疑云需要明确答案)
+1. [专家：警惕碧桂园重蹈恒大覆辙](https://so.toutiao.com/search?keyword=专家：警惕碧桂园重蹈恒大覆辙)
+1. [妇人疑捡花生时被卷入收割机死亡](https://so.toutiao.com/search?keyword=妇人疑捡花生时被卷入收割机死亡)
+1. [于和伟回应角色总成出圈热梗](https://so.toutiao.com/search?keyword=于和伟回应角色总成出圈热梗)
+1. [《困兽》发布终极预告](https://so.toutiao.com/search?keyword=《困兽》发布终极预告)
+1. [江苏一外卖小哥疑似当街被捅伤](https://so.toutiao.com/search?keyword=江苏一外卖小哥疑似当街被捅伤)
+1. [国务院将对16个省份实地督查](https://so.toutiao.com/search?keyword=国务院将对16个省份实地督查)
+1. [女生晒自己大一和研一区别](https://so.toutiao.com/search?keyword=女生晒自己大一和研一区别)
+1. [外媒分析数据：中国芯片转折点来了](https://so.toutiao.com/search?keyword=外媒分析数据：中国芯片转折点来了)
+1. [中方呼吁巴以冲突有关各方保持克制](https://so.toutiao.com/search?keyword=中方呼吁巴以冲突有关各方保持克制)
+1. [人间重晚晴](https://so.toutiao.com/search?keyword=人间重晚晴)
+1. [400万豪车右转撞上正常直行大货车](https://so.toutiao.com/search?keyword=400万豪车右转撞上正常直行大货车)
 1. [加沙“地面战”为何已难以避免](https://so.toutiao.com/search?keyword=加沙“地面战”为何已难以避免)
 1. [中国特使：巴人民建国诉求不容否决](https://so.toutiao.com/search?keyword=中国特使：巴人民建国诉求不容否决)
-1. [富士康被查有何玄机](https://so.toutiao.com/search?keyword=富士康被查有何玄机)
-1. [美用过83次一票否决权53次给以色列](https://so.toutiao.com/search?keyword=美用过83次一票否决权53次给以色列)
-1. [广东汕头发生5.0级地震](https://so.toutiao.com/search?keyword=广东汕头发生5.0级地震)
-1. [外媒称加沙经历最血腥夜晚](https://so.toutiao.com/search?keyword=外媒称加沙经历最血腥夜晚)
-1. [刘慈欣为招行90后员工颁雨果奖](https://so.toutiao.com/search?keyword=刘慈欣为招行90后员工颁雨果奖)
-1. [四川资阳多人当街打架斗殴](https://so.toutiao.com/search?keyword=四川资阳多人当街打架斗殴)
-1. [24岁产妇产后出血昏迷50多天离世](https://so.toutiao.com/search?keyword=24岁产妇产后出血昏迷50多天离世)
-1. [为买华为Mate 60顾客购买问界新车](https://so.toutiao.com/search?keyword=为买华为Mate+60顾客购买问界新车)
-1. [买1.6万黄金1小时后换款缩水5600](https://so.toutiao.com/search?keyword=买1.6万黄金1小时后换款缩水5600)
 1. [司机将他人顶挡风玻璃上行驶百公里](https://so.toutiao.com/search?keyword=司机将他人顶挡风玻璃上行驶百公里)
-1. [青岛啤酒董事会就小便门发布公告](https://so.toutiao.com/search?keyword=青岛啤酒董事会就小便门发布公告)
-1. [芯片管制再升级 美国到底在怕什么](https://so.toutiao.com/search?keyword=芯片管制再升级+美国到底在怕什么)
-1. [网友吐槽上海地铁“板凳族”](https://so.toutiao.com/search?keyword=网友吐槽上海地铁“板凳族”)
 1. [火锅店老板娘化身机器人给顾客敬酒](https://so.toutiao.com/search?keyword=火锅店老板娘化身机器人给顾客敬酒)
 1. [以色列女孩认出遇难者是自己母亲](https://so.toutiao.com/search?keyword=以色列女孩认出遇难者是自己母亲)
 1. [重阳节都有哪些习俗](https://so.toutiao.com/search?keyword=重阳节都有哪些习俗)
 1. [以色列高官威胁伊朗和黎巴嫩](https://so.toutiao.com/search?keyword=以色列高官威胁伊朗和黎巴嫩)
-1. [于和伟说莫言才是我的yyds](https://so.toutiao.com/search?keyword=于和伟说莫言才是我的yyds)
 1. [286斤女生硬挤坐高铁二等座引争议](https://so.toutiao.com/search?keyword=286斤女生硬挤坐高铁二等座引争议)
 1. [儿童支原体肺炎感染为什么难治](https://so.toutiao.com/search?keyword=儿童支原体肺炎感染为什么难治)
 1. [媒体评约谈校园“鼠头”事件](https://so.toutiao.com/search?keyword=媒体评约谈校园“鼠头”事件)
 1. [美收紧半导体出口管制引业界不满](https://so.toutiao.com/search?keyword=美收紧半导体出口管制引业界不满)
-1. [妇人疑捡花生时被卷入收割机死亡](https://so.toutiao.com/search?keyword=妇人疑捡花生时被卷入收割机死亡)
 1. [重阳节为何是“老人节”](https://so.toutiao.com/search?keyword=重阳节为何是“老人节”)
 1. [宝马司机顶债主行驶5公里画面曝光](https://so.toutiao.com/search?keyword=宝马司机顶债主行驶5公里画面曝光)
 1. [江南等地明起将迎降雨](https://so.toutiao.com/search?keyword=江南等地明起将迎降雨)
 1. [胡锡进：撒尿事件对企业形象是恐袭](https://so.toutiao.com/search?keyword=胡锡进：撒尿事件对企业形象是恐袭)
-1. [周杰伦演唱会抢镜女粉丝回应](https://so.toutiao.com/search?keyword=周杰伦演唱会抢镜女粉丝回应)
-1. [男童因家中无人照看从5楼坠落](https://so.toutiao.com/search?keyword=男童因家中无人照看从5楼坠落)
 1. [若爆发地面战 巴以局势如何变化](https://so.toutiao.com/search?keyword=若爆发地面战+巴以局势如何变化)
 1. [负债12亿的足协钱都花哪了](https://so.toutiao.com/search?keyword=负债12亿的足协钱都花哪了)
-1. [iPhone 15全系降价](https://so.toutiao.com/search?keyword=iPhone+15全系降价)
 1. [星链直接用于手机可能会在明年启动](https://so.toutiao.com/search?keyword=星链直接用于手机可能会在明年启动)
 1. [外交部：美为菲站台 用心十分险恶](https://so.toutiao.com/search?keyword=外交部：美为菲站台+用心十分险恶)
-1. [塞尔维亚：谴责威胁中国统一的企图](https://so.toutiao.com/search?keyword=塞尔维亚：谴责威胁中国统一的企图)
-1. [网友吐槽00后女儿不知道东西南北](https://so.toutiao.com/search?keyword=网友吐槽00后女儿不知道东西南北)
-1. [外媒分析数据：中国芯片转折点来了](https://so.toutiao.com/search?keyword=外媒分析数据：中国芯片转折点来了)
 1. [塞防长：中国装备增强塞尔维亚实力](https://so.toutiao.com/search?keyword=塞防长：中国装备增强塞尔维亚实力)
 1. [股市为何瀑布式下跌](https://so.toutiao.com/search?keyword=股市为何瀑布式下跌)
 1. [葛荟婕：不要影响到孩子就好](https://so.toutiao.com/search?keyword=葛荟婕：不要影响到孩子就好)
@@ -64,16 +87,13 @@
 1. [派出所回应男子球场被打倒地抽搐](https://so.toutiao.com/search?keyword=派出所回应男子球场被打倒地抽搐)
 1. [结婚和离婚该考虑哪些](https://so.toutiao.com/search?keyword=结婚和离婚该考虑哪些)
 1. [和袁姗姗一起打卡贵州黔东南](https://so.toutiao.com/search?keyword=和袁姗姗一起打卡贵州黔东南)
-1. [专家：警惕碧桂园重蹈恒大覆辙](https://so.toutiao.com/search?keyword=专家：警惕碧桂园重蹈恒大覆辙)
 1. [新晋“90后”雨果奖得主是金融人](https://so.toutiao.com/search?keyword=新晋“90后”雨果奖得主是金融人)
 1. [两男子球场起冲突致1人重伤系谣言](https://so.toutiao.com/search?keyword=两男子球场起冲突致1人重伤系谣言)
 1. [专家：别再投喂可可西里野狼了](https://so.toutiao.com/search?keyword=专家：别再投喂可可西里野狼了)
 1. [券商：业绩是底部修复期的重要线索](https://so.toutiao.com/search?keyword=券商：业绩是底部修复期的重要线索)
-1. [纳米压印技术能取代光刻机吗](https://so.toutiao.com/search?keyword=纳米压印技术能取代光刻机吗)
 1. [一景区两人攀岩失足坠落 1死1重伤](https://so.toutiao.com/search?keyword=一景区两人攀岩失足坠落+1死1重伤)
 1. [编剧称《为有暗香来》讲述一种无奈](https://so.toutiao.com/search?keyword=编剧称《为有暗香来》讲述一种无奈)
 1. [央媒评可可西里网红野狼被投喂](https://so.toutiao.com/search?keyword=央媒评可可西里网红野狼被投喂)
-1. [女生晒自己大一和研一区别](https://so.toutiao.com/search?keyword=女生晒自己大一和研一区别)
 1. [台南4成8不支持民进党“完全执政”](https://so.toutiao.com/search?keyword=台南4成8不支持民进党“完全执政”)
 1. [刘震云：一地鸡毛是正常的生活状态](https://so.toutiao.com/search?keyword=刘震云：一地鸡毛是正常的生活状态)
 1. [实体黄金价格创多年新高](https://so.toutiao.com/search?keyword=实体黄金价格创多年新高)
@@ -196,7 +216,6 @@
 1. [旅客带保健石入境核辐射超标1050倍](https://so.toutiao.com/search?keyword=旅客带保健石入境核辐射超标1050倍)
 1. [韩国进口泡菜99%来自中国](https://so.toutiao.com/search?keyword=韩国进口泡菜99%来自中国)
 1. [媒体：中国球员连现有外援都争不过](https://so.toutiao.com/search?keyword=媒体：中国球员连现有外援都争不过)
-1. [以军将对加沙发动持续3个月地面攻势](https://so.toutiao.com/search?keyword=以军将对加沙发动持续3个月地面攻势)
 1. [警方辟谣针织厂老板克扣工资被杀](https://so.toutiao.com/search?keyword=警方辟谣针织厂老板克扣工资被杀)
 1. [应莹：A股将在2900点左右出现底部](https://so.toutiao.com/search?keyword=应莹：A股将在2900点左右出现底部)
 1. [新疆班主任点名能点一节课](https://so.toutiao.com/search?keyword=新疆班主任点名能点一节课)
